# QtWidgetDesigner

./: .gitignore  CMakeLists.txt  README.md
cmake/: QtAutoTestConfig.cmake.in
docs/: agent-protocol.md  mcp-tool-server.md  roadmap.md  sdk-integration.md
examples/demo-app/: CMakeLists.txt  README.md  demo_visualizer.cpp  demo_visualizer.h  main.cpp  main_window.cpp  main_window.h
examples/sdk-consumer/: CMakeLists.txt  README.md  main.cpp
mcp/qtautotest-mcp/: main.cpp
sdk/include/qtautotest/: action_observer.h  actions.h  bridge_client.h  bridge_stream_client.h  harness.h  qtautotest.h  runtime.h  selector.h  snapshot.h  version.h
sdk/src/: action_observer.cpp  agent_bridge_server.cpp  agent_bridge_server.h  app_log_sink.cpp  app_log_sink.h  bridge_client.cpp  bridge_operations.cpp  bridge_operations.h  bridge_stream_client.cpp  demo_visualizer.cpp  demo_visualizer.h  harness.cpp  runtime.cpp  ui_action_executor.cpp  ui_event_monitor.cpp  widget_introspection.cpp  widget_introspection.h
tools/: manual_client.py  verify-sdk-install.ps1
